# teflon

./: .gitignore  README.md  config.py  main.py  pyproject.toml
exps/dataset/raw/: DJI.csv  FTSE.csv  GSPC.csv  IXIC.csv  N225.csv  NSE.csv  NYA.csv  PSX.csv  SSE.csv
src/: ml_models.py  stats_models.py
src/models/: ab_empty.py  ab_noconv.py  ab_nograv.py  ab_nomlp.py  ab_nomlp2.py  attn.py  gran.py  gru.py  lstm.py  mlp.py  rnn.py
src/utils/: data.py  plot.py  train.py  util.py
